renaming project folder

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://dahlia1210.github.io/pizza-delivery/",
-  "name": "pizza",
+  "name": "pizza-delivery",
   "private": true,
   "version": "0.0.0",
   "type": "module",
